misc fixes
- mobile sidenav opacity
- chapter and volume details structure on tablet and mobile
- fixing cut offs on mobile
- fix tag badge cut off
- fix tag badge not breaking words

--- a/UI/Web/src/app/app.component.scss
+++ b/UI/Web/src/app/app.component.scss
@@ -46,10 +46,6 @@
         height: 100dvh !important;
     }
 
-    ::ng-deep body {
-        //height: calc(var(--vh)* 100 - var(--nav-mobile-offset)) !important;
-    }
-
     .container-fluid {
         padding: 0;
     }
