--- a/UI/Web/src/app/shared/person-badge/person-badge.component.scss
+++ b/UI/Web/src/app/shared/person-badge/person-badge.component.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     cursor: pointer;
     width: 100px;
-    height: 100px;
+    word-break: break-word;
 
     i {
         font-size: 2rem;
