--- a/UI/Web/src/styles.scss
+++ b/UI/Web/src/styles.scss
@@ -107,8 +107,9 @@ body {
 
   @media (max-width: 576px) {
     margin-top: var(--nav-mobile-offset) !important;
-    //height: calc(var(--vh)* 100 - var(--nav-mobile-offset)) !important;
-}
+    height: calc(var(--vh)* 100 - var(--nav-mobile-offset)) !important;
+  }
+
 }
 
 .setting-section-break {
