--- a/UI/Web/src/theme/themes/dark.scss
+++ b/UI/Web/src/theme/themes/dark.scss
@@ -221,7 +221,7 @@
 
     /* Side Nav */
     --side-nav-bg-color: var(--elevation-layer9-dark);
-    --side-nav-mobile-bg-color: var(--elevation-layer9-dark);
+    --side-nav-mobile-bg-color: var(--elevation-layer2-dark-solid);
     --side-nav-openclose-transition: 0.15s ease-in-out;
     --side-nav-box-shadow: var(--elevation-layer0);
     --side-nav-mobile-box-shadow: 3px 0em 5px 10em rgb(0 0 0 / 50%);
